# chatgpt-discord

./: .gitignore  API_KEY  README.md  main.py  pyproject.toml
src/: main.py
