[tool.poetry]
name = "chatgpt-discord"
version = "0.1.0"
description = ""
authors = ["Karan Kumar <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
